--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vite-pwa/nuxt": "^0.10.5",
+    "add": "^2.0.6",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
